<resources>
    <string name="app_name">UR CLOSET</string>
    <string name="facebook_app_id" translatable="false">198249675630124</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb198249675630124</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="activate_gps_question">هذه الخدمة تتطلب تفعيل GPS هل تريد المتابعة !!</string>
    <string name="validation_failed">Please check all fields</string>
    <string name="enter_code">Please Enter Code</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selled">Selled</string>
    <string name="blocked">Blocked</string>
    <string name="tax">Tax</string>
    <string name="message_price">Message price</string>
    <string name="email_phone_num">Email or phone number</string>
    <string name="login_with">Login with</string>
    <string name="double_click">اضغط مرة اخرى للخروج</string>
    <string name="start">ابدأ</string>
    <string name="start_e">Start</string>
    <string name="user_name">Username</string>
    <string name="no_data">No Data Available</string>
    <string name="welcome_msg">Welcome to Echo</string>
    <string name="sign_in">sign in</string>
    <string name="enter_by_facebook">الدخول عن طريق فيس بوك</string>
    <string name="continue_as_vistor">المتابعة كزائر</string>
    <string name="create_new_account">حساب جديد</string>
    <string name="item4">open</string>
    <string name="message_wtih_reply">Message with a reply</string>
    <string name="only_message">Message only</string>
    <string name="nothing_to_show">No Data</string>
    <string name="chef">CHEF</string>
    <string name="message_setting">Message settings</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="enter_a_valid_email_address">Please Enter a valid Email address</string>
    <string name="password_is_required">Password is required</string>
    <string name="password_lenght">Password must be at least 6 characters without spaces</string>
    <string name="chagne_password">Change Password</string>
    <string name="old_password">Old password</string>
    <string name="old_password_wrong">Old password is wrong</string>
    <string name="enter_your_mobile_number">Enter your phone number</string>
    <string name="send_code_hint1">We\'ll send a verification code to your phone via text message</string>
    <string name="continue_hint">Continue</string>
    <string name="privacy_hint1">By creating an account,you agree to our</string>
    <string name="privacy_policy">terms of use &amp; privacy policy</string>
    <string name="donot_have_account">Don\'t have an account</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_code_hint1">Enter code send to your number</string>
    <string name="enter_code_wrong_code">Wrong code!!!!</string>
    <string name="enter_code_hint2">we sent it to the number </string>
    <string name="resend_code">Resend code</string>
    <string name="sign_up">Sign up</string>
    <string name="skip">Skip For Now</string>
    <string name="continue_as_normal">Continue as a normal user</string>
    <string name="enter_digit">Enter digit code</string>
    <string name="forgot_password_email_hint">We have sent a verification code to your registered email id</string>
    <string name="forgot_password_phone_hint">The Code was sent to your mobile number.</string>
    <string name="please_enter_code">Please enter code</string>
    <string name="sign_up_hint1">Sign up!</string>
    <string name="sign_up_hint2">Create an account to get start.</string>
    <string name="ok">OK</string>
    <string name="forgot_passowrd">Forgot Your password</string>
    <string name="or">OR</string>
    <string name="new_user">new user?</string>
    <string name="view_all">View all</string>
    <string name="trending">Trending</string>
    <string name="categories">Categories</string>
    <string name="change">Change</string>
    <string name="featured">Featured</string>
    <string name="new_and_noteworthy">New and Noteworthy</string>
    <string name="message_status">Message Status</string>
    <string name="read">Read</string>
    <string name="unread">Unread</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="new_product">New Product</string>
    <string name="hot_deals">Hot Deals</string>
    <string name="view_all_offres">View All Offers</string>
    <string name="temp">temp</string>
    <string name="test">TEST</string>
    <string name="close_drawer">close_drawer</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="timeout">bad internet connection</string>
    <string name="logout">Log Out</string>
    <string name="quantity">Quantity</string>
    <string name="take_table">Take Table </string>
    <string name="leave_table">Leave Table</string>
    <string name="name_hint">Name:</string>
    <string name="name">Name</string>
    <string name="subject_name">اسم المادة</string>
    <string name="validate_empty_field">Empty field not allowed!</string>
    <string name="verification_code">Verification code</string>
    <string name="create_account">Create Account</string>
    <string name="please_enter_your_registeration_details">Please enter your registeration details</string>
    <string name="full_name">Full Name</string>
    <string name="hint_code_email">We have sent a verification code to your email please enter it</string>
    <string name="hint_code_phone">We have sent a verification code to your phone please enter it</string>
    <string name="complete_your_account_data">Your Information</string>
    <string name="job_titile">Job Titile</string>
    <string name="edit_job_titile_specialty">Edit Job Titile and Specialty</string>
    <string name="specialty">Specialty</string>
    <string name="date_of_virth">Date of Birth</string>
    <string name="bio">Bio</string>
    <string name="select_your_message">Select your message</string>
    <string name="iban">IBAN</string>
    <string name="done">Done</string>
    <string name="reply_to_message">Reply to message</string>
    <string name="payment_and_send">Payment and Send</string>
    <string name="message_reply_hint">You can receive a reply to your email or login</string>
    <string name="type_message_here">Type a message here</string>
    <string name="send_new_message">send a new message</string>
    <string name="reply_to_message_hint">Reply to message to get the amount</string>
    <string name="select_gender">Please Select Gender</string>
    <string name="validate_email_field">E-mail format not correct!</string>
    <string name="no_enternet">No Enternet!!!</string>
    <string name="select_country_hint">Select Country!!!</string>
    <string name="please_wait">Please Wait!!</string>
    <string name="faild">Failed</string>
    <string name="faild_to_login">user name or passowrd not true</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="enter_your_registered">Enter your registered phone number</string>
    <string name="next">Next</string>
    <string name="faild_get_data">Faild To Get Data</string>
    <string name="no_connection">No Connection</string>
    <string name="resturant_name">Restaurant Name:</string>
    <string name="add_value">Add Value</string>
    <string name="submit">Submit</string>
    <string name="hold">Hold</string>
    <string name="on_progress">On Progress</string>
    <string name="upload_image">upload image</string>
    <string name="favorite">Favorite</string>
    <string name="manage_messages">Manage Messages</string>
    <string name="personal_balance">Personal Balance</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="follow_us_on">Follow us on</string>
    <string name="contact_us_hint">Here are some ways to contact us</string>
    <string name="usage_policy">Usage Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_with_us">Contact With Us</string>
    <string name="invite_freinds">Invite your friends</string>
    <string name="rate_us_on_store">Rate us on store</string>
    <string name="email_or_phone">Email or phone number</string>
    <string name="enter_email_for_account">Enter the email  associated with an account</string>
    <string name="enter_phone_for_account">Enter the phone number associated with an account</string>
    <string name="edit">Edit</string>
    <string name="edit_name">Name Editing</string>
    <string name="edit_image">Photo Editing</string>
    <string name="edit_phone">Phone Editing</string>
    <string name="edit_bio">Bio Editing</string>
    <string name="edit_date_of_bith">Birth Date Editing</string>
    <string name="edit_email">Email Editing</string>
    <string name="home">Home</string>
    <string name="continuetxt">Continue</string>
    <string name="question">Question</string>
    <string name="message">Messages</string>
    <string name="message_me">Messages Me</string>
    <string name="message_hint">Message</string>
    <string name="message_type">Message type</string>
    <string name="message_title">Message title</string>
    <string name="price_hint">Price</string>
    <string name="add_new_message">Add New Message</string>
    <string name="add">Add</string>
    <string name="account">Account</string>
    <string name="delete">Delete</string>
    <string name="hide">Hide</string>
    <string name="pleas_wait">Please Wait…</string>
    <string name="faild_to_edit_data">Faild To Edit Order</string>
    <string name="manage_messsage">Manage Messages</string>
    <string name="select_photo">please select image!!!</string>
    <string name="inbox">Inbox</string>
    <string name="send">Send</string>
    <string name="send_form">Sent from</string>
    <string name="new_txt">New</string>
    <string name="read_txt">Read</string>
    <string-array name="splash_title">
        <item>Ready to Travel</item>
        <item>Pick the Ticket</item>
        <item>Flight to Destination</item>
        <item>Enjoy Holiday</item>
    </string-array>
    <string-array name="message_types">
        <item>Message with a reply</item>
        <item>Message only</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="stop_message">Stop messages</string>
    <string-array name="langues">
        <item>English</item>
        <item>عربي</item>
    </string-array>
    <string name="email">Email Address</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="select_sub_category">Select sub category…</string>
    <string name="product_name">Product Name</string>
    <string name="no_result">No Result</string>
    <string name="allow_dolaby_to_acces_your_location">Allow "Dolaby" to acces your location</string>
    <string name="rate">Rate</string>
    <string name="allow_location_hint1">Location is used for compliance and is stored with record data</string>
    <string name="allow">Allow</string>
    <string name="allow_lcaoation">Allow Locations</string>
    <string name="dont_allow">Don\'t allow</string>
    <string name="give_us_rating">Rate App For Better Experience</string>
    <string name="later">Later</string>
    <string name="pay_comission">Pay Commission</string>
    <string name="write_commission">Please Enter Commissions</string>
    <string name="default_commission">10 SAR</string>
    <string name="confirm_pay">Confirm Pay</string>
</resources>