<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activity.locatonActivity.LocationActivity">

   <include
       android:id="@+id/toolbar"
       layout="@layout/toolbar_backpress1"/>

    <LinearLayout
        android:layout_marginStart="@dimen/d1_6"
        android:layout_marginEnd="@dimen/d1_6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:text="@string/allow_lcaoation"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/unit"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_marginTop="@dimen/two_unit"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/location_image"
            android:layout_width="100dp"
            android:layout_height="160dp"/>

        <TextView
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"
           android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/allow_dolaby_to_acces_your_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/text_header_color"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:fontFamily="@font/roboto_bold"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/allow_location_hint1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:background="@android:color/white"

            android:layout_marginBottom="@dimen/d2"

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_allow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_allow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/d0_8"

                app:cardBackgroundColor="@color/login_btn"
                app:cardCornerRadius="@dimen/d1_2"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/d1"
                    android:text="@string/allow"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <LinearLayout
                android:id="@+id/card_denied"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/d0_8"
                android:background="@drawable/button_outlined_color"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/d1"
                    android:text="@string/dont_allow"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>




</LinearLayout>


</RelativeLayout>